# roza-jewerly-backend

./: .env  .gitmodules  Dockerfile  Makefile  commads.txt  pyproject.toml  requirements.txt
backend/api/: middlewares.py
backend/api/v1/: serializers.py  urls.py  views.py
backend/app/: admin.py  seed.py
backend/app/migrations/: 0001_initial.py  0002_alter_menuitem_menu_type_and_more.py  0003_remove_menuitemtranslation_master_and_more.py
backend/app/models/: products.py
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
docker_compose/: backend.yaml  redis.yaml  storages.yaml
